# CuSeqAlign

./: .gitignore  CMakeLists.txt
include/: aligner.hpp  comparator.hpp  cualign_kernels.cuh  cualigner.hpp  cualigner_local.hpp  defs.hpp  fasta_io.hpp  global_aligner.hpp  local_aligner.hpp
scripts/: bench_range.py  generate_reference_alignments.py  generate_reference_alignments_balibase.py
src/: base_exec.cpp  base_exec.cu  base_exec_local.cu  main.cpp  validation.cpp  validation.cu  validation_local.cu
